feat: support Neo-reGeorg shell generate (#35)